maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:27: error: not found: value posX
  setIndication(posX,posY,0)
                ^JediEscaper:27: error: not found: value posY
  setIndication(posX,posY,0)
                     ^JediEscaper:31: error: value t is not a member of Int
      for(y<- 0 t getMondeHauteur()){
                ^